Polished UI for lightning-fast user experience

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/antd": "^1.0.0",
+    "@types/highcharts": "^7.0.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^5.2.3",
+    "glamor": "^2.20.40",
     "highcharts": "^10.3.3",
     "normalizr": "^3.6.2",
     "react": "^18.2.0",
